@@ -7,6 +7,7 @@ cnb000087983.xml - Translator (700 field).
 cnb000103538.xml - Multiple publishers (710 field).
 cnb000121825.mrc - Date of birth (100 field).
 cnb000403605.mrc - Multiple publishers (260 field). Series (490 field).
+cnb000510591.xml - Two languages (041 field).
 cnb000573607.mrc
 cnb000576456.mrc
 cnb000641953.mrc - Special format of series ordinal (490 field).
